# rpick

./: Cargo.toml  Makefile  build.rs
.cargo/: config.toml
src/: avplayer.m  cache.rs  commands.rs  config.rs  filesystem.rs  lib.rs  main.rs  ocr.rs  ui.rs  video.rs  vision_helper.m  window_helper.m
tests/: integration.rs
