[package]
name = "rpick"
version = "0.1.0"
edition = "2024"
description = "Video file manager and organizer — Rust port of gopick"

[dependencies]
# CLI argument parsing
clap = { version = "4", features = ["derive"] }

# Serialization for caching
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Directory walking
walkdir = "2"

# Image processing (for OCR frame encoding)
image = { version = "0.25", default-features = false, features = ["jpeg", "png"] }

# Terminal UI / progress bars
indicatif = "0.17"

# Random suffix generation
rand = "0.8"

# Time utilities
chrono = "0.4"

# Hex encoding for hashes
hex = "0.4"

# Hashing (imohash replacement)
blake3 = "1"

[build-dependencies]
cc = "1"

[dev-dependencies]
tempfile = "3"
